<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/rgSmsEmail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btOk"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" >

        <RadioButton
            android:id="@+id/rbSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/sms"
            />

        <RadioButton
            android:id="@+id/rbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/email"/>

    </RadioGroup>

    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btCancel"
        android:layout_alignBottom="@+id/btCancel"
        android:layout_alignRight="@+id/rgSmsEmail"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:layout_marginTop="164dp"
        android:layout_toLeftOf="@+id/btOk"
        android:text="@string/cancel" />

</RelativeLayout>